# Haku

./: .env.example  .env.free-tier  .gitignore  ACCELERATION_GUIDE.md  BACKTESTING_GUIDE.md  CAPITAL_BUILDING_PLAN.md  Cargo.toml  ENHANCED_BOT_QUICKSTART.md  FREE_TIER_ACCELERATED.md  FREE_TIER_SETUP.md  IMPLEMENTATION_ROADMAP.md  OPTIMIZATION_GUIDE.md  OPTIMIZATION_GUIDE_PART2.md  OPTIMIZATION_SUMMARY.md  PRIORITY_IMPLEMENTATION.md  QUICK_START.md  README.md  RESUME.md  SESSION_SUMMARY.md  START_HERE.md  START_TODAY.md  TELEGRAM_SETUP.md  V2_1_FEATURES.md  V2_1_RELEASE_NOTES.md  WHATS_NEW.md  setup.sh  tracked_wallets.txt
crates/analysis/: Cargo.toml
crates/analysis/src/: chart_analyzer.rs  insider_detection.rs  lib.rs  pattern_recognition.rs  smart_money_score.rs  wallet_metrics.rs
crates/bot/: Cargo.toml
crates/bot/src/: alpha_accelerator.rs  backtester.rs  dashboard.rs  enhanced_main.rs  lib.rs  main.rs  persistence.rs  portfolio_monitor.rs  position_manager.rs  telegram.rs
crates/bot/static/: dashboard.html
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  types.rs
crates/data/: Cargo.toml
crates/data/src/: jupiter.rs  lib.rs  rpc.rs  scam_check.rs  token.rs  transaction.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs  schema.rs  statistics.rs  trades.rs  wallets.rs
crates/risk/: Cargo.toml
crates/risk/src/: lib.rs
crates/strategy/: Cargo.toml
crates/strategy/src/: lib.rs
crates/trading/: Cargo.toml
crates/trading/src/: lib.rs
