[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/data",
    "crates/analysis",
    "crates/trading",
    "crates/risk",
    "crates/strategy",
    # "crates/db",  # Not used - using file-based persistence instead
    "crates/bot",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Solana Trading Bot Team"]
license = "MIT"

[workspace.dependencies]
# Solana
solana-client = "1.18"
solana-sdk = "1.18"
solana-transaction-status = "1.18"
anchor-lang = "0.30"
anchor-client = "0.30"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-stream = "0.1"

# HTTP/WebSocket
reqwest = { version = "0.11", features = ["json"] }
tungstenite = "0.21"
tokio-tungstenite = "0.21"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Cryptography
bs58 = "0.5"
ed25519-dalek = "2.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
uuid = { version = "1.6", features = ["serde", "v4"] }
dashmap = "5.5"
rayon = "1.8"

# Numerical
rust_decimal = { version = "1.33", features = ["serde-with-str"] }

# Config
config = "0.13"
dotenvy = "0.15"

# Rate limiting
governor = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
