[package]
name = "trading-analysis"
version.workspace = true
edition.workspace = true

[dependencies]
trading-core = { path = "../core" }
trading-data = { path = "../data" }

solana-sdk = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
dashmap = { workspace = true }
rayon = { workspace = true }
uuid = { workspace = true }
