[package]
name = "trading-core"
version.workspace = true
edition.workspace = true

[dependencies]
solana-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
bs58 = { workspace = true }
