[package]
name = "trading-data"
version.workspace = true
edition.workspace = true

[dependencies]
trading-core = { path = "../core" }

solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }

tokio = { workspace = true }
tokio-stream = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
bs58 = { workspace = true }
dashmap = { workspace = true }
governor = { workspace = true }
uuid = { workspace = true }
