[package]
name = "trading-db"
version.workspace = true
edition.workspace = true

[dependencies]
trading-core = { path = "../core" }

tokio = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled", "chrono", "uuid"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-sdk = { workspace = true }
